--- a/bank page/bank.css
+++ b/bank page/bank.css
@@ -159,7 +159,7 @@ header a.logo{
 }
 
 
-
+/* code for the error message that appears if the input of the user is not correct  */
 .error {
     color: red;
     font-size: 11px;
