--- a/fout page/fout.css
+++ b/fout page/fout.css
@@ -1,4 +1,4 @@
-{
+{ /* for everything */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -6,11 +6,11 @@
 }
 
 
-img{ /* voor alle afbeeldingen */
+img{ /* for all images */
     max-width: 100%;
 }
 
-body {
+body { /* for everything inside the body */
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     background: #000;
 }
@@ -28,45 +28,21 @@ body::before {
 
 
 
-
-body a.logo{
+/* Code for the Netflix logo */
+body a.logo {
     display: block;
 }
-body .logo svg{
+
+body .logo svg {
     fill: #e50914;
-    height: 27px;
-}
-@media screen and (min-width:550px) {
-    body .logo svg{
-        height: 37px;
-    }
-
-
-
-
-
-div.splash{
-    position:relative;
-    z-index: -1;
-}
-div.splash div.gradient{
-    background-image: linear-gradient(to top,rgba(0,0,0,.8) 0,rgba(0,0,0,0) 60%,rgba(0,0,0,.8) 100%);
-    position:absolute;
-    inset:0;
-}
-div.splash div.background{
-    position:absolute;
-    z-index:1;
-    inset right:0;
-}
-div.splash div.background img{
-    height:100%;
-    opacity: 0.6;
-    object-fit: cover;
+    height: 27px; /* Default height */
 }
 
+@media screen and (min-width: 550px) {
+    body .logo svg { height: 37px; } /* Height for larger screens */
+}
 
-nav {  /* voor Netflix logo */
+nav {
     position: fixed;
     padding: 25px 60px;
     z-index: 1;
@@ -81,7 +57,35 @@ nav a img {
 
 
 
-.form-wrapper { /* voor de zwarte block */
+
+/* the following code is responsible for the background of the page */
+
+div.gradient{ /* code responsible for the gradient of the background image */
+    position:absolute;
+    inset:0;
+    background-image: linear-gradient(to top,rgba(0,0,0,.8) 0,rgba(0,0,0,0) 60%,rgba(0,0,0,.8) 100%);
+}
+
+
+div.background{ /* code responsible for the background image */
+    position:absolute;
+    opacity: 0.6;
+}
+
+div.splash{ /* code responsible for the positioning of the entire background */
+    position:relative;
+    z-index: -1;
+}
+
+
+
+
+
+
+
+
+/* code for the error message */
+.form-wrapper {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -92,21 +96,22 @@ nav a img {
     transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, .75);
 }
+
+/* code for the error message: text h1*/
 .form-wrapper h1 {
     color: #fff;
     font-size: 2rem;
     font-weight: bold;
 }
-
+/* code for the error message: text h2*/
 .form-wrapper h2 {
     color: #fff;
     font-size: 1.5rem;
     margin-top: 15px;
-
     font-weight: normal;
 
 }
-
+/* code for the error message: text h13*/
 .form-wrapper h3 {
     color: #fff;
     margin-top: 30px;
@@ -116,6 +121,9 @@ nav a img {
 
 }
 
+
+
+/* code for the padding inside the error box*/
 
 .form-wrapper .content {
 
