--- a/login page/loginstyle.css
+++ b/login page/loginstyle.css
@@ -1,13 +1,13 @@
-* {
+* { /* for everything */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-img{ /* voor alle afbeeldingen */
+img{ /* for all images */
     max-width: 100%;
 }
-body {
+body { /* for the body */
     background: #000;
 }
 body::before {
@@ -21,6 +21,8 @@ body::before {
     background: url("images/hero-img.jpg");
     background-position: center;
 }
+
+/* code for the Netflix logo */
 body a.logo{
     display: block;
 }
@@ -33,28 +35,6 @@ body .logo svg{
         height: 37px;
     }
 
-
-div.splash{
-    position:relative;
-    z-index: -1;
-}
-div.splash div.gradient{
-    background-image: linear-gradient(to top,rgba(0,0,0,.8) 0,rgba(0,0,0,0) 60%,rgba(0,0,0,.8) 100%);
-    position:absolute;
-    inset:0;
-}
-div.splash div.background{
-    position:absolute;
-    z-index:1;
-    inset right:0;
-}
-div.splash div.background img{
-    height:100%;
-    opacity: 0.6;
-    object-fit: cover;
-}
-
-
 nav {
     position: fixed;
     padding: 25px 60px;
@@ -63,6 +43,30 @@ nav {
 nav a img {
     width: 167px;
 }
+
+
+/* the following code is responsible for the background of the page */
+
+div.gradient{ /* code responsible for the gradient of the background image */
+    position:absolute;
+    inset:0;
+    background-image: linear-gradient(to top,rgba(0,0,0,.8) 0,rgba(0,0,0,0) 60%,rgba(0,0,0,.8) 100%);
+}
+
+
+div.background{ /* code responsible for the background image */
+    position:absolute;
+    opacity: 0.6;
+}
+
+div.splash{ /* code responsible for the positioning of the entire background */
+    position:relative;
+    z-index: -1;
+}
+
+
+
+/* code for the black box for the registration */
 .form-wrapper {
     position: absolute;
     left: 50%;
@@ -85,6 +89,8 @@ form .form-control {
     position: relative;
     margin-bottom: 16px;
 }
+
+/* code for the input boxes */
 .form-control input {
     height: 100%;
     width: 100%;
@@ -96,10 +102,8 @@ form .form-control {
     font-size: 1rem;
     padding: 0 20px;
 }
-.form-control input:is(:focus, :valid) {
-    background: #444;
-    padding: 16px 20px 0;
-}
+
+/* code for the label on the input boxes */
 .form-control label {
     position: absolute;
     left: 20px;
@@ -114,28 +118,8 @@ form .form-control {
     font-size: 0.75rem;
     transform: translateY(-130%);
 }
-body a.button{
-    display: inline-block;
-    background-color: #e50914;
-    color: #fff;
-    text-decoration: none;
-    padding: 12px 130px;
-    border-radius: 3px;
-}
-body a.button {
-    width: 100%;
-    padding: 13px 130px;
-    font-size: 1rem;
-    background: #e50914;
-    color: #fff;
-    font-weight: 500;
-    border-radius: 4px;
-    border: none;
-    outline: none;
-    margin: 25px 0 10px;
-    cursor: pointer;
-    transition: 0.1s ease;
-}
+
+
 form button:hover {
     background: #c40812;
 }
@@ -152,6 +136,8 @@ form .form-help {
     display: flex;
     justify-content: space-between;
 }
+
+/* code for the remember button */
 form .remember-me {
     display: flex;
 }
@@ -159,20 +145,9 @@ form .remember-me input {
     margin-right: 5px;
     accent-color: #b3b3b3;
 }
-form .form-help :where(label, a) {
-    font-size: 0.9rem;
-}
-.form-wrapper p a {
-    color: #fff;
-}
-.form-wrapper small {
-    display: block;
-    margin-top: 15px;
-    color: #b3b3b3;
-}
-.form-wrapper small a {
-    color: #0071eb;
-}
+
+
+/* code to adapt the size for mobile devices */
 @media (max-width: 740px) {
     body::before {
         display: none;
@@ -191,20 +166,18 @@ form .form-help :where(label, a) {
         margin: 25px 0 40px;
     }
 }
-div.splash div.gradient{
-    background-image: linear-gradient(to top,rgba(0,0,0,.8) 0,rgba(0,0,0,0) 60%,rgba(0,0,0,.8) 100%);
-}
 
 
 
 
 
-.button {
-    background: #E50914; /* Button background color */
-    padding: 10px 20px;        /* Padding around the text */
-    font-size: 16px;           /* Adjust font size */
+
+.button { /* code for the Sign In button */
+    background: #E50914;
+    padding: 10px 20px;
+    font-size: 16px;
     display: flex;
-    cursor: pointer;           /* Pointer cursor on hover */
+    cursor: pointer;
 
 
     align-items: center;
@@ -222,14 +195,15 @@ div.splash div.gradient{
     left: 70px;
 
 
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif; /* Change font family */
-    color: white; /* Change text color */
-    font-size: 1.1rem; /* Change font size */
+    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    color: white;
+    font-size: 1.1rem;
     font-weight: bold;
 
 }
 
 
+/* code for the error message*/
 .error {
     color: red;
     font-size: 11px;
